--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node_3xpress",
   "version": "1.0.0",
   "description": "Primera aplicacion con express",
-  "main": "app.js",
+  "main": "src/app.js",
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/Noteverlasting/express1#readme",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
